upload fixed form presentation and radio buttons alignment

--- a/meseek/nadeshiko/static/nadeshiko/css/creative.css
+++ b/meseek/nadeshiko/static/nadeshiko/css/creative.css
@@ -333,7 +333,7 @@ header.masthead p {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif; 
 }
 
-#formFromScan input {
+#formFromScan input[type="text"] {
   width: 80%;
 }
 
